n8n-prod-1/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n-prod-1
  labels:
    app: n8n
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
      name: http
  selector:
    app: n8n
