n8n-prod-1/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-ingress
  namespace: n8n-prod-1
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.prod-1.dev-software.pl`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: prod-1-dev-software-prod-tls
